# md380emu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.h
firmware/: download.sh  md380-fw.py
